Первый коммит 15 спринта